XW-3295: global nav gap uder dropdown fix

--- a/style-guide/styles/wds-components/_global-navigation.scss
+++ b/style-guide/styles/wds-components/_global-navigation.scss
@@ -52,9 +52,9 @@
 	}
 
 	&__dropdown-content {
+		border-top: 1px solid $wds-color-light-c4;
 		color: $wds-color-dark-blue-gray;
 		min-width: 190px;
-		top: calc(100% + 1px);
 		z-index: -1;
 	}
 
